--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,45 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="preload" href="./2489__jobro__piano-ff/39172__jobro__piano-ff-025.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39173__jobro__piano-ff-026.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39174__jobro__piano-ff-027.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39175__jobro__piano-ff-028.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39176__jobro__piano-ff-029.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39177__jobro__piano-ff-030.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39178__jobro__piano-ff-031.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39179__jobro__piano-ff-032.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39180__jobro__piano-ff-033.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39181__jobro__piano-ff-034.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39182__jobro__piano-ff-035.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39183__jobro__piano-ff-036.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39184__jobro__piano-ff-037.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39185__jobro__piano-ff-038.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39186__jobro__piano-ff-039.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39187__jobro__piano-ff-040.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39188__jobro__piano-ff-041.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39189__jobro__piano-ff-042.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39190__jobro__piano-ff-043.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39191__jobro__piano-ff-044.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39193__jobro__piano-ff-045.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39194__jobro__piano-ff-046.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39195__jobro__piano-ff-047.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39196__jobro__piano-ff-048.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39197__jobro__piano-ff-049.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39198__jobro__piano-ff-050.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39199__jobro__piano-ff-051.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39200__jobro__piano-ff-052.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39201__jobro__piano-ff-053.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39202__jobro__piano-ff-054.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39203__jobro__piano-ff-055.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39204__jobro__piano-ff-056.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39205__jobro__piano-ff-057.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39206__jobro__piano-ff-058.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39207__jobro__piano-ff-059.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39208__jobro__piano-ff-060.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39209__jobro__piano-ff-061.wav" as="audio">
+
     <title>Ear Perfect</title>
   </head>
   <body>
