testing audio fix

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <link rel="preload" href="./2489__jobro__piano-ff/39183__jobro__piano-ff-036.wav" as="audio">
     <link rel="preload" href="./2489__jobro__piano-ff/39184__jobro__piano-ff-037.wav" as="audio">
     <link rel="preload" href="./2489__jobro__piano-ff/39185__jobro__piano-ff-038.wav" as="audio">
-    <link rel="preload" href="./2489__jobro__piano-ff/39186__jobro__piano-ff-039.wav" as="audio">
+    <link rel="preload" href="./2489__jobro__piano-ff/39186__jobro__piano-ff-039.wav" as="video">
     <link rel="preload" href="./2489__jobro__piano-ff/39187__jobro__piano-ff-040.wav" as="audio">
     <link rel="preload" href="./2489__jobro__piano-ff/39188__jobro__piano-ff-041.wav" as="audio">
     <link rel="preload" href="./2489__jobro__piano-ff/39189__jobro__piano-ff-042.wav" as="audio">
